css/index.css
.hero.section-bg {
	background-image: url(../img/night-mt.jpeg);
}

.redIco {
	color: #dd0a37;
}
body {
	-webkit-transition: all 1s ease-in-out;
	-moz-transition: all 1s ease-in-out;
	-o-transition: all 1s ease-in-out;
	-ms-transition: all 1s ease-in-out;
	transition: all 1s ease-in-out;
}
.mt-3 {
	margin-top: 20px;
}
#gradLogo::before {
	display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	font-family: "Font Awesome 5 Free"; 
	font-weight: 900;
	font-size: 3.8rem;
	content: "FR\f2dcSTHACK";
	background: -webkit-linear-gradient(left, #35aeff, #ff2ed2);
	-webkit-background-clip: text;
	background-clip: text;
	-webkit-text-fill-color: transparent;
}

.navNotTop .navbar-brand .logo .logo-img {
  display: none;
}

.navTop .navbar-brand .logo .logo-alt-img {
  display: none;
}

/* .navTop {

}

.navNotTop {

} */

.navTop {
	padding-top : 2%;
}

.navNotTop {
  position: fixed !important;
  left: 0;
  right: 0;
  top: 0;
  background-color: #ffffff !important;
  -webkit-box-shadow: 0px 0px 3px #0003;
  box-shadow: 0px 0px 3px #0003;
  border-bottom: none;
  padding-top: 1%;
  transition: all 0.6s;
}

#header.navNotTop .main-nav li a {
  color: #0b0f28;
}

#header.navNotTop .navbar-toggle {
  color: #0b0f28 !important;
}

#home > div.home-wrapper h4  i {
	padding-left: 20px;
}

#home div.home-wrapper .home-content img {
	width: 70%;
}

.navTop ul.main-nav {
	font-size: 1.5rem;
	letter-spacing: 0.2rem;
	font-weight: 600;
}

.navNotTop {
	font-size: 1.5rem;
	letter-spacing: 0.2rem;
	font-weight: 600;
}


#footer .contact-social a {
	height: 3em;
}

#footer .contact-social img {
	height: 2em;
	margin-bottom: 15px;
}

.contact img {
	height: 4em;
}

.track {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;
	margin-top: 2em;
}

.track img {
	height: 10em;
}

.tracks .col-sm-4 {
	margin-bottom: 30px;
	margin-top: 30px;
}

.centered-code {
	text-align: center;
}

.sponbox {
	margin-top: 100px;
}

.sponRow {
	display: flex;
	justify-content: center;
}

.sponFlex {
	display: flex;
	flex-direction: column;
	align-items: center;
}
.sponFlex .sponsor {
	margin: 40px;
}


/* devfolio */
#devfolio-apply-now {
    -ms-flex-align: center;
    -webkit-box-align: center;
    align-items: center;
    background-color: #3770FF;
    border-radius: 3px;
    border: none;
    color: #FFFFFF;
    cursor: pointer;
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
    font-size: 18px;
    font-weight: 600;
    padding: 12px 20px;
    text-align: center;
    text-transform: lowercase;
}

#devfolio-apply-now:not([disabled]) {
    cursor: pointer;
}

#devfolio-apply-now:hover {
    background-color: #2954BF !important;
}
.cta-button-hero {
	font-family: Arial, Helvetica, sans-serif;
	background-color: #3770FF;
	font-size: 1.2rem;
	padding: 0.3rem 2rem;
	height: 44px;
	width: 212px;
	color: #fff;
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 5px;
	text-decoration: none;
	transition: all 0.3s; 
	text-align: center;
	display: block;
	font-size: 1.8rem; 
	margin-left: auto;
	margin-right: auto;
}
.cta-button-hero img {
	height: 110% !important; }
.cta-button-hero:hover {
	transform: scale(1.03);
	box-shadow: 0px 0px 1rem var(--color-textShadow-2); 
}
.center-content {
	margin-left: auto;
	margin-right: auto;
}

.gradient-border {
	padding: 5px;
	/* background: linear-gradient(to right, #f56aa7, #3ad8f6); */
	background: deepskyblue;
	border-radius: 8px;
}

.gradient-border > .track {
	background-color: white;
	border-radius: inherit;
	height: 250px;
}

.gradient-border .mt-3 {
	padding-bottom: 10px;
	padding-top: 10px;
	font-size: 14px;
	font-weight: 500;
}

.streak-prize {
	/* background: rgb(240,106,167);
	background: linear-gradient(90deg, 
			rgba(240,106,167,0.8687850140056023) 0%, 
			rgba(255,255,255,0) 48%, 
			rgba(255,255,255,1) 52%, 
			rgba(0,212,255,0.8827906162464986) 100%); */
	color: white;
	background: deepskyblue;
	width: 100%;
}

.track .img {
	height: 10em;
	display: flex;
	justify-content: center;
	align-items: center;
}

.track .img img {
	width: 90%;
	height: auto;
}

.img-adjust {
	max-height: 10em;
	max-width: 100%;
	width: auto !important;
}

@media only screen and (max-width : 1023px) and (min-width : 425px) {
	.extra-wide-adjust {
		height: 80% !important;
		width: auto !important;
	}
}

#about .track {
	margin-top: 0em;
}

.spon-platinum{
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
}
.spon-diamond{
	margin-bottom: 30px;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
	
}
/*----------Prizes Cards-------*/
#cards_landscape_wrap-2{
	text-align: center;
	background: #F7F7F7;
	
  }
  #cards_landscape_wrap-2 .container{
	padding-top: 80px; 
	padding-bottom: 100px;
	
  }
  #cards_landscape_wrap-2 a{
	text-decoration: none;
	outline: none;
  }
  #cards_landscape_wrap-2 .card-flyer {
	border-radius: 5px;
	  border: 2px solid #ffffff;
  }
  #cash-prize-r1
  {
	padding-left: 40px;
	padding-right: 40px;
  }
  

  #cards_landscape_wrap-2 .card-flyer .image-box{
	background: #ffffff;
	overflow: hidden;
	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.50);
	border-radius: 5px;
	border: 5px;
	
  }
  #cards_landscape_wrap-2 .card-flyer .image-box img{
	-webkit-transition:all .9s ease; 
	-moz-transition:all .9s ease; 
	-o-transition:all .9s ease;
	-ms-transition:all .9s ease; 
	width: 80%;
	height: 200px;
  }
  
  #cards_landscape_wrap-2 .card-flyer:hover .image-box img{
	opacity: 0.7;
	-webkit-transform:scale(1.15);
	-moz-transform:scale(1.15);
	-ms-transform:scale(1.15);
	-o-transform:scale(1.15);
	transform:scale(1.15);
  }
  #cards_landscape_wrap-2 .card-flyer .image-box-noncash{
	background: #ffffff;
	overflow: hidden;
	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.50);
	border-radius: 5px;
	border: 5px;
	padding: 20px;
	
  }
  #cards_landscape_wrap-2 .card-flyer .image-box-noncash img{
	-webkit-transition:all .9s ease; 
	-moz-transition:all .9s ease; 
	-o-transition:all .9s ease;
	-ms-transition:all .9s ease; 
	width: 80%;
	height: 80px;
  }
  #cards_landscape_wrap-2 .card-flyer:hover .image-box-noncash img{
	opacity: 0.7;
	-webkit-transform:scale(1.15);
	-moz-transform:scale(1.15);
	-ms-transform:scale(1.15);
	-o-transform:scale(1.15);
	transform:scale(1.15);
  }
  #cards_landscape_wrap-2 .card-flyer .text-box{
	text-align: center;
  }
  #cards_landscape_wrap-2 .card-flyer .text-box .text-container{
	padding: 20px 10px;
	
  }
  #cards_landscape_wrap-2 .card-flyer{
	
	margin-top: 50px;
	-webkit-transition: all 0.2s ease-in;
	-moz-transition: all 0.2s ease-in;
	-ms-transition: all 0.2s ease-in;
	-o-transition: all 0.2s ease-in;
	transition: all 0.2s ease-in;
	box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.40);
  }
  #cards_landscape_wrap-2 .card-flyer:hover{
	background: deepskyblue;
	box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
	-webkit-transition: all 0.2s ease-in;
	-moz-transition: all 0.2s ease-in;
	-ms-transition: all 0.2s ease-in;
	-o-transition: all 0.2s ease-in;
	transition: all 0.2s ease-in;
	margin-top: 50px;
	
  }
  #cards_landscape_wrap-2 .card-flyer .text-box p{
	margin-top: 5px;
	margin-bottom: 0px;
	padding-bottom: 0px; 
	font-size: 20px;
	letter-spacing: 1px;
	color: #000000;
  }
  #cards_landscape_wrap-2 .card-flyer .text-box h5{
	margin-top: 0px;
	margin-bottom: 0px; 
	font-size: 40px;
	font-weight: bold;
	text-transform: uppercase;
	font-family: 'Roboto Black', sans-serif;
	letter-spacing: 1px;
	color: rgb(0, 0, 0);
  }
#hackon {
	height:100px;
	width:350px;
	background-color: #02013d;
	padding: 10px;
	margin: 0px;
}
#theme-toggle {
	position: fixed;
	bottom: 30px;
	right: 20px;
	height: 40px;
	width: 40px;
	border-radius: 50px;
	background-color: white;
	padding:10px;
	border: 2px solid #73AD21;
}
.track:hover {
	transform: scale(1.05);
	box-shadow: 0px 0px 1rem var(--color-textShadow-2);
}
.sponsor{
	background-color: white;
	pading: 7px;
	margin-bottom: 20px;
	border-radius: 10px;
	border: 2px solid #ffffff;
}
#frosthacklogo {
	margin-top: 100px;
}
.container-theme {
	height: 300px;
	width: 1150px;
	left: calc(50% - 300px);
	display: flex;
}

.card {
	display: flex;
	height: 150px;
	width: 200px;
	background-color: #17141d;
	border-radius: 10px;
	box-shadow: -1rem 0 3rem #000;
	/*   margin-left: -50px; */
	transition: 0.4s ease-out;
	position: relative;
	left: 0px;
}

.card:not(:first-child) {
	margin-left: -50px;
}

.card:hover {
	transform: translateY(-20px);
	transition: 0.4s ease-out;
}

.card:hover ~ .card {
	position: relative;
	left: 50px;
	transition: 0.4s ease-out;
}

.title-theme {
	color: white;
	font-weight: 300;
	position: absolute;
	left: 20px;
	top: 15px;
}

.bar {
	position: absolute;
	top: 100px;
	left: 20px;
	height: 5px;
	width: 150px;
}

.emptybar {
	background-color: #2e3033;
	width: 100%;
	height: 100%;
}

.filledbar {
	position: absolute;
	top: 0px;
	z-index: 3;
	width: 0px;
	height: 100%;
	background: rgb(0,154,217);
	background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
	transition: 0.6s ease-out;
}

.card:hover .filledbar {
	width: 120px;
	transition: 0.4s ease-out;
}

.circle {
	position: absolute;
	top: 150px;
	left: calc(50% - 60px);
}

.stroke {
	stroke: white;
	stroke-dasharray: 360;
	stroke-dashoffset: 360;
	transition: 0.6s ease-out;
}
#theme_details:hover {
	transform: scale(1.05);

}
.card:hover .stroke {
	stroke-dashoffset: 100;
	transition: 0.6s ease-out;
}
@media only screen and (max-width: 768px) {
	.container-theme {
		display: none;
	}
}



.hero-section{
	align-items: flex-start;
	display: flex;
	min-height: 100%;
	justify-content: center;
	padding: var(--spacing-xxl) var(--spacing-l);
	font-family: 'Montserrat', sans-serif;
	font-size: 14px;
	--spacing-s: 8px;
	--spacing-m: 16px;
	--spacing-l: 24px;
	--spacing-xl: 32px;
	--spacing-xxl: 64px;
}

.card-grid{
	display: grid;
	grid-template-columns: repeat(1, 1fr);
	grid-column-gap: var(--spacing-l);
	grid-row-gap: var(--spacing-l);
	max-width: var(--width-container);
	width: 100%;
}

@media(min-width: 540px){
	.card-grid{
		grid-template-columns: repeat(2, 1fr);
	}
}

@media(min-width: 960px){
	.card-grid{
		grid-template-columns: repeat(4, 1fr);
	}
}

.winners_card{
	list-style: none;
	position: relative;
}

.winners_card:before{
	content: '';
	display: block;
	padding-bottom: 150%;
	width: 100%;
}

.card__background{
	background-size: cover;
	background-position: center;
	border-radius: var(--spacing-l);
	bottom: 0;
	filter: brightness(0.75) saturate(1.2) contrast(0.85);
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
	transform-origin: center;
	trsnsform: scale(1) translateZ(0);
	transition:
			filter 200ms linear,
			transform 200ms linear;
}

.winners_card:hover .card__background{
	transform: scale(1.05) translateZ(0);
}

.card-grid:hover > .winners_card:not(:hover) .card__background{
	filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
}

.card__content{
	left: 0;
	padding: var(--spacing-l);
	position: absolute;
	top: 0;
}

.card__category{
	color: white;
	font-size: 2rem;
	margin-bottom: var(--spacing-s);
	text-transform: uppercase;
}

.card__heading{
	color: white;
	font-size: 1.5rem;
	text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
	line-height: 1.4;
	word-spacing: 100vw;
}

